do not change visibility and font size of header

--- a/frameworks/oxbytao/css/header.css
+++ b/frameworks/oxbytao/css/header.css
@@ -1,6 +1,6 @@
 @import "header-project.css";
 
-teiHeader {
-    visibility: visible;
-    font-size: unset;
+teiHeader,
+teiHeader > * {
+    display: block;
 }
