simplify CSS for diplomatic view
Using `content: "\A"` makes everything much simpler than making the lb
element block or inline-block element.

--- a/frameworks/oxbytao/css/diplomatic.css
+++ b/frameworks/oxbytao/css/diplomatic.css
@@ -1,7 +1,14 @@
-lb, pb {
-    display: block;
+/* the diplomatic view starts a new line on every lb */
+lb:before,
+pb:before {
+    content: "\A" !important;
 }
 
 lb {
-    content: "" !important;
+    content: "";
+}
+
+lb[n] {
+    content: attr(n) " ";
+    color: silver;
 }
