improved CSS for taxonomies in the tei header

--- a/frameworks/oxbytao/css/common.css
+++ b/frameworks/oxbytao/css/common.css
@@ -1,6 +1,6 @@
 @namespace xml "http://www.w3.org/XML/1998/namespace";
 
-
+/* teiHeader must be turned on with +Header optional style */
 teiHeader,
 teiHeader > * {
     display: none;
@@ -139,30 +139,4 @@ span[from]:before {
 
 span[to]:before {
     content: oxy_button(actionID, "highlight.referenced", transparent, true) oxy_button(actionID, "sel.tag", transparent, true);
-}
-
-
-/* taxonomies and interpGrps */
-
-interpGrp {
-    display: block;
-}
-
-interpGrp > interp {
-    display: block;
-}
-
-taxonomy,
-category,
-interpGrp,
-interp {
-    padding-left: 1em;
-}
-
-/* show IDs of taxonomies and categories */
-taxonomy[xml|id]:before,
-category[xml|id]:before,
-interpGrp[xml|id]:before,
-interp[xml|id]:before {
-    content: "#" attr(xml|id) ": ";
 }
